po: update po/nl_NL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 18:57+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:55+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -391,7 +391,7 @@ msgstr "Profielen"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Fields"
-msgstr "CiviCRM profielvelden"
+msgstr "CiviCRM-profielvelden"
 
 msgctxt "menu"
 msgid "Add Field"
@@ -638,7 +638,7 @@ msgstr "Cache legen en paden bijwerken"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CMS Database Integration"
-msgstr "CMS-database-integratie"
+msgstr "Integratie CMS en database"
 
 msgctxt "menu"
 msgid "Safe File Extension Options"
@@ -747,7 +747,7 @@ msgstr "CiviCRM-startpagina"
 
 msgctxt "menu"
 msgid "CiviCRM Dashlets"
-msgstr "CiviCRM dashlets"
+msgstr "CiviCRM-dashlets"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1044,7 +1044,7 @@ msgstr "Deelnemerslijstsjablonen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Name Badge Layouts"
-msgstr "Opmaak evenementnaambadge"
+msgstr "Opmaak naambadge evenement"
 
 msgctxt "menu"
 msgid "Conference Slot Labels"
@@ -1057,7 +1057,7 @@ msgstr "Deelnemers zoeken"
 
 msgctxt "menu"
 msgid "Print Event Name Badge"
-msgstr "Evenementnaambadge afdrukken"
+msgstr "Naambadge afdrukken"
 
 msgctxt "menu"
 msgid "Event Info and Settings"
@@ -1343,7 +1343,7 @@ msgstr "Nieuwe e-mail"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Tags (Categories)"
-msgstr "Kenmerken (categoriën) beheren"
+msgstr "Kenmerken (categorieën) beheren"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1573,7 +1573,7 @@ msgstr "Uitgaande e-mail (SMTP/Sendmail)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Processors"
-msgstr "Betaalmethoden"
+msgstr "Betalingsproviders"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2079,7 +2079,7 @@ msgstr "Betaling weergeven"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Communication Style Options"
-msgstr "Communicatiestijl-opties"
+msgstr "Communicatiestijlen"
 
 msgctxt "menu"
 msgid "Import Multi-value Custom Data"
