--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 19:52+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:57+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -379,7 +379,7 @@ msgstr "Geraakte activiteit"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Log Type"
-msgstr "Logtype"
+msgstr "Log-type"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 #: CRM/Report/Form/Contribute/LoggingSummary.php
@@ -423,7 +423,7 @@ msgstr "Contacttype (Contact B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact SubType (Contact B)"
-msgstr "Contact Subtype (Contact B)"
+msgstr "Subtype contact (Contact B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Email of Contact A"
@@ -1725,7 +1725,7 @@ msgstr "Neem deze statistieken mee"
 #: templates/CRM/Report/Form/Case/Detail.tpl
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Report Settings"
-msgstr "Rapport Instellingen"
+msgstr "Rapport-instellingen"
 
 #: templates/CRM/Report/Form/ErrorMessage.tpl
 msgid "Sorry. No results found."
@@ -1771,7 +1771,7 @@ msgstr "E-mailinstellingen"
 
 #: templates/CRM/Report/Form/Instance.tpl
 msgid "Other Settings"
-msgstr "Andere instellingen"
+msgstr "Overige instellingen"
 
 #: templates/CRM/Report/Form/Instance.tpl
 msgid ""
