--- a/po/fi_FI/menu.po
+++ b/po/fi_FI/menu.po
@@ -5,6 +5,7 @@
 # Translators:
 # Antti Kekki <antti.kekki@gmail.com>, 2013
 # Antti Kekki <antti.kekki@gmail.com>, 2013
+# Jaakko Helleranta <jaakko@helleranta.com>, 2016
 # Joona Soininen <joonasoininen@gmail.com>, 2012
 # Otto Kekäläinen <otto@seravo.fi>, 2013
 # Otto Kekäläinen <otto@seravo.fi>, 2013
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-16 18:01+0000\n"
+"Last-Translator: Jaakko Helleranta <jaakko@helleranta.com>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2116,11 +2117,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "PDF Invoice"
-msgstr ""
+msgstr "PDF-lasku"
 
 msgctxt "menu"
 msgid "Email Invoice"
-msgstr ""
+msgstr "Lähetä lasku sähköpostilla"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
