po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:17+0000\n"
+"PO-Revision-Date: 2016-02-16 22:43+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2221,7 +2221,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Duration Unit"
-msgstr ""
+msgstr "Unité de durée pour le type d'adhésion"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Duration Interval"
