--- a/po/fr_FR/menu.po
+++ b/po/fr_FR/menu.po
@@ -11,6 +11,7 @@
 # jean-guy avelin <jga974@gmail.com>, 2013
 # Nicolas <nicolas@cividesk.com>, 2013
 # Paul Caranton <caranton.paul@gmail.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 19:58+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"PO-Revision-Date: 2016-02-16 22:10+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -665,7 +666,7 @@ msgstr "Paramètres multisites"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviEvent Component Settings"
-msgstr "Paramètres du Composant CiviEvent"
+msgstr "Paramètres du composant CiviEvent"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
