po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 22:02+0000\n"
+"PO-Revision-Date: 2016-02-16 22:18+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1478,7 +1478,7 @@ msgstr "URL des ressources CiviCRM"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
-msgstr "URL pour l'envoi des images"
+msgstr "URL des images téléchargées"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Custom css URL"
@@ -2170,7 +2170,7 @@ msgstr "AVERTISSEMENT : la suppression de cette option entrainera la perte de to
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
-msgstr "Synchroniser %1 utilisateurs"
+msgstr "Synchroniser les utilisateurs %1"
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize Users to Contacts:"
@@ -6042,7 +6042,7 @@ msgstr "Entrées du tableau de bord"
 msgid ""
 "Configure how many events should be shown on the dashboard. This overrides "
 "the default value of 10 entries."
-msgstr ""
+msgstr "Configure le nombre d'événements qui seront affichés sur le tableau de bord. Remplace la valeur par défaut de 10 entrées."
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
@@ -6050,7 +6050,7 @@ msgstr "Montrer tous"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail dedupes e-mail addresses by default"
-msgstr ""
+msgstr "CiviMail dédoublonne par défaut les adresses courriel"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Hashed Mailing URL's"
@@ -6481,7 +6481,7 @@ msgstr ""
 msgid ""
 "An HTML formatted version of this message will be sent to contacts whose "
 "Email Format preference is 'HTML' or 'Both'."
-msgstr ""
+msgstr "Une version au format HTML de ce message sera envoyée aux contacts dont les préférences de format des courriels sont 'HTML' ou 'Les deux'."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid ""
@@ -6581,7 +6581,7 @@ msgstr ""
 msgid ""
 "Set this value to <strong>Yes</strong> if you want CiviCRM error/debugging "
 "messages to appear in the Drupal error logs"
-msgstr ""
+msgstr "Configurez cette valeur à <strong>Oui</strong> si vous voulez que les messages d'erreur/de débogage apparaissent dans le fichier journal d'erreurs de Drupal."
 
 #: templates/CRM/Admin/Form/Setting/Debugging.tpl
 msgid ""
