--- a/po/de_DE/financial.po
+++ b/po/de_DE/financial.po
@@ -8,7 +8,7 @@
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Hanno <h.paul@praxis-habighorst.de>, 2013
-# Martin Peth <peth@systopia.de>, 2014-2015
+# Martin Peth <peth@systopia.de>, 2014-2016
 # heliogabal <rhalbmann@gmail.com>, 2014
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
 # Fabian <schuttenberg@systopia.de>, 2013
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:06+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-17 12:20+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -898,7 +898,7 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialType.php
 msgid "The financial type \"%1\" has been updated."
-msgstr ""
+msgstr "Die Zuwendungsart \"%1\" wurde aktualisiert."
 
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
