--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -13,7 +13,7 @@
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2011
 # Jon Altuna <jonaltuna@msn.com>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti <m.prat@ixiam.com>, 2014,2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-05 15:11+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-02-18 15:38+0000\n"
+"Last-Translator: Marti <m.prat@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4771,7 +4771,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Generate PDFs for printing (only)"
-msgstr ""
+msgstr "Generar PDF's para imprimir (sólo)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
@@ -4816,7 +4816,7 @@ msgstr "Gracias por su contribución/es"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Please see attached"
-msgstr ""
+msgstr "Por favor, ver el adjunto"
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid "Missing required fields: Soft Credit"
@@ -4832,15 +4832,15 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
-msgstr ""
+msgstr "Vencimiento del reintegro"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Details"
-msgstr ""
+msgstr "Detalles del reintegro"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "The date this payment was received."
-msgstr ""
+msgstr "Fecha en la que el pago fue recibido."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Automatically email a receipt to %1?"
@@ -4898,7 +4898,7 @@ msgstr "Esta contribución recurrente será automaticamente procesada cada %1 %2
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Total amount of this contribution."
-msgstr ""
+msgstr "Cantidad total de esta contribución."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -5107,7 +5107,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2(s)"
-msgstr ""
+msgstr "Esta contribución recurrente  se procesará de forma automática cada %1 %2(s)"
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -5123,11 +5123,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Payment Instrument ID"
-msgstr ""
+msgstr "ID del instrumento de pago"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Status ID"
-msgstr ""
+msgstr "ID del estado de la contribución"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
@@ -5145,15 +5145,15 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Amount"
-msgstr ""
+msgstr "Cantidad reintegrada"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Date"
-msgstr ""
+msgstr "Fecha de reintegro"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Payment Processor Error"
-msgstr ""
+msgstr "Error del procesador de pagos"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
@@ -5174,26 +5174,26 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
 msgid_plural "%count contributions deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count contribución eliminada."
+msgstr[1] "%count contribuciones eliminadas."
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
 "Please select only contributions with Completed, Pending, Refunded status."
-msgstr ""
+msgstr "Por favor, sólo seleccionar contribuciones con estado Completado, Pendiente y/o Reintegrado."
 
 #: CRM/Contribute/Form/Task/Invoice.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Email Invoice"
-msgstr ""
+msgstr "Enviar factura por correo electrónico"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Print Contribution Invoice"
-msgstr ""
+msgstr "Imprimir factura de la contribución"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
-msgstr ""
+msgstr "Factura en PDF"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "From Email Address is required"
@@ -5208,11 +5208,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Process Invoice(s)"
-msgstr ""
+msgstr "Procesar factura(s)"
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Override privacy setting? (Do no email / Do not mail)"
-msgstr ""
+msgstr "Sobreescribir configuración de privacidad? (No recibir correo electrónico / No recibir correo postal)"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
@@ -5228,7 +5228,7 @@ msgstr ""
 
 #: CRM/Contribute/Info.php
 msgid "access CiviContribute"
-msgstr ""
+msgstr "acceder a CiviContribute"
 
 #: CRM/Contribute/Info.php
 msgid ""
@@ -5238,23 +5238,23 @@ msgstr ""
 
 #: CRM/Contribute/Info.php
 msgid "edit contributions"
-msgstr ""
+msgstr "editar contribuciones"
 
 #: CRM/Contribute/Info.php
 msgid "Record and update contributions"
-msgstr ""
+msgstr "Grabar y actualizar contribuciones"
 
 #: CRM/Contribute/Info.php
 msgid "make online contributions"
-msgstr ""
+msgstr "realizar contribuciones en línea"
 
 #: CRM/Contribute/Info.php
 msgid "delete in CiviContribute"
-msgstr ""
+msgstr "eliminar en CiviContribute"
 
 #: CRM/Contribute/Info.php
 msgid "Delete contributions"
-msgstr ""
+msgstr "Eliminar contribuciones"
 
 #: CRM/Contribute/Task.php
 msgid "Print or Email Contribution Invoices"
@@ -5404,7 +5404,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Print Invoice"
-msgstr ""
+msgstr "Imprimir factura"
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
