po: update po/cy_GB/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/admin.po
+++ b/po/cy_GB/admin.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-02-19 16:38+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -1510,7 +1510,7 @@ msgstr ""
 #: CRM/Admin/Form/WordReplacements.php
 #: templates/CRM/Admin/Form/WordReplacements.hlp
 msgid "Word Replacements"
-msgstr ""
+msgstr "Amnewid Geiriau"
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Please Enter the value for Replacement Word"
@@ -6279,7 +6279,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Register your site"
-msgstr ""
+msgstr "Cofrestru eich safle"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
