po: update po/cy_GB/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/common-base.po
+++ b/po/cy_GB/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-02-19 16:38+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -285,7 +285,7 @@ msgstr "Pob Digwyddiad"
 #: CRM/ACL/Form/ACL.php CRM/Contact/Page/View/CustomData.php
 #: xml/templates/civicrm_data.tpl
 msgid "Custom Data"
-msgstr ""
+msgstr "Data Addasu"
 
 #: CRM/ACL/Form/ACL.php CRM/ACL/Page/ACL.php
 msgid "Profile"
@@ -558,7 +558,7 @@ msgstr ""
 #: CRM/Activity/BAO/Query.php CRM/Activity/DAO/Activity.php
 #: CRM/Activity/Form/Activity.php xml/templates/civicrm_data.tpl
 msgid "Engagement Index"
-msgstr ""
+msgstr "Mynegai ymrwymiad"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity created by"
@@ -6226,7 +6226,7 @@ msgstr ""
 
 #: CRM/Core/BAO/UFField.php xml/templates/civicrm_data.tpl
 msgid "Premiums"
-msgstr ""
+msgstr "Premiymau"
 
 #: CRM/Core/BAO/UFField.php CRM/Price/DAO/LineItem.php
 #: CRM/Price/DAO/PriceFieldValue.php CRM/Price/DAO/PriceSet.php
@@ -9589,7 +9589,7 @@ msgstr ""
 
 #: CRM/Custom/Page/Option.php
 msgid "Custom Data Fields"
-msgstr ""
+msgstr "Meysydd Data Addasu"
 
 #: CRM/Dedupe/DAO/Exception.php
 msgid "First Dupe Contact ID"
@@ -25085,7 +25085,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Env.php
 msgid "Outbound Email Settings"
-msgstr ""
+msgstr "Gosodiadau Anfon Ebost"
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Soft Credit %1 - %2 doesn't exist. Row was skipped."
@@ -26927,7 +26927,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "Darparu gwybodaeth ynghylch statws cyfraniadau mynych"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Sales Tax Account is"
