po: update po/cy_GB/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/menu.po
+++ b/po/cy_GB/menu.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Gareth Morlais, 2015
+# Robin Farrar <hogyndrwg@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-19 17:41+0000\n"
+"Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +55,7 @@ msgstr "Statws Ymgyrch"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Engagement Index"
-msgstr ""
+msgstr "Mynegai ymrwymiad"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -64,7 +65,7 @@ msgstr "Gosodiadau Cydran CiviCampaign"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Reserve Respondents"
-msgstr ""
+msgstr "Cadw Ymatebyddion Wrth Gefn"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -77,7 +78,7 @@ msgstr "Recordio Cyfweliadau Ymatebyddion"
 
 msgctxt "menu"
 msgid "GOTV (Track Voters)"
-msgstr ""
+msgstr "GOTV (Tracio Pleidleiswyr)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -161,7 +162,7 @@ msgstr "Mathau Achosion"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Redaction Rules"
-msgstr ""
+msgstr "Rheolau Dileu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -205,7 +206,7 @@ msgstr "Teitl a Gosodiadau"
 
 msgctxt "menu"
 msgid "Contribution Amounts"
-msgstr ""
+msgstr "Meintiau Cyfraniadau"
 
 msgctxt "menu"
 msgid "Membership Section"
@@ -225,11 +226,11 @@ msgstr "Dweud wrth Ffrind"
 
 msgctxt "menu"
 msgid "Configure Widget"
-msgstr ""
+msgstr "Ffurfweddu Teclyn"
 
 msgctxt "menu"
 msgid "Premiums"
-msgstr ""
+msgstr "Premiymau"
 
 msgctxt "menu"
 msgid "Add Products to This Page"
@@ -242,7 +243,7 @@ msgstr "Tudalen Cyfraniad Newydd"
 
 msgctxt "menu"
 msgid "Manage Premiums"
-msgstr ""
+msgstr "Rheoli Premiymau"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -345,11 +346,11 @@ msgstr "Canfod Gweithgareddau"
 
 msgctxt "menu"
 msgid "Custom Data"
-msgstr ""
+msgstr "Data Addasu"
 
 msgctxt "menu"
 msgid "Custom Data Fields"
-msgstr ""
+msgstr "Meysydd Data Addasu"
 
 msgctxt "menu"
 msgid "Custom Field - Options"
@@ -449,7 +450,7 @@ msgstr "Mathau Gwefannau"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Instant Messenger Services"
-msgstr ""
+msgstr "Gwasanaethau Negeseuon Gwib"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -478,7 +479,7 @@ msgstr "Dewislen Llywio"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Word Replacements"
-msgstr ""
+msgstr "Amnewid Geiriau"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -503,7 +504,7 @@ msgstr "Templedi Negeseuon"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Schedule Reminders"
-msgstr ""
+msgstr "Atgoffebion Amserlen"
 
 msgctxt "menu"
 msgid "This should never be seen"
@@ -512,7 +513,7 @@ msgstr "Dylai hwn byth cael ei weld"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
-msgstr ""
+msgstr "Hoff Ddulliau Cyfathrebu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -522,7 +523,7 @@ msgstr "Dyluniad Labeli"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Print Page (PDF) Formats"
-msgstr ""
+msgstr "Fformatau Argraffu Tudalen (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -555,7 +556,7 @@ msgstr "Fformatiau Dyddiad"
 
 msgctxt "menu"
 msgid "Preferred Languages"
-msgstr ""
+msgstr "Dewis Ieithoedd"
 
 msgctxt "menu"
 msgid "Access Control"
@@ -591,7 +592,7 @@ msgstr "Uwchraddiadau Cronfa Ddata"
 
 msgctxt "menu"
 msgid "Outbound Email Settings"
-msgstr ""
+msgstr "Gosodiadau Anfon Ebost"
 
 msgctxt "menu"
 msgid "Payment Processor"
@@ -1187,7 +1188,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "View Mailing"
-msgstr ""
+msgstr "Gweld Postiad"
 
 msgctxt "menu"
 msgid "Approve Mailing"
@@ -2136,7 +2137,7 @@ msgstr "Ailadrodd Digwyddiad"
 
 msgctxt "menu"
 msgid "Opt-out"
-msgstr ""
+msgstr "Eithrio"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2151,39 +2152,39 @@ msgstr "Rheoli Profion A/B"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Cefnogaeth"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Dechrau arni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Gofyn cwestiwn"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Cael cymorth arbenigol"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Ynglŷn â CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Cofrestru eich safle"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Ymuno â CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "Darparu gwybodaeth ynghylch statws cyfraniadau mynych"
