--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -34,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:26+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:24+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1323,7 +1323,7 @@ msgstr "E-Mail miteinbeziehen"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Nickname"
-msgstr "Akronym miteinbeziehen"
+msgstr "Pseudonym miteinbeziehen"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Alphabetical Pager"
@@ -3748,7 +3748,7 @@ msgstr "Wenn aktiviert, werden bei der Suche nach dem Namen automatisch die E-Ma
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
 "If enabled, nicknames are automatically included when users search by Name."
-msgstr "Wenn aktiviert, werden Akronyme automatisch bei der Suche miteinbezogen."
+msgstr "Wenn aktiviert, werden Pseudonyme automatisch bei der Suche miteinbezogen."
 
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
