--- a/po/cy_GB/report.po
+++ b/po/cy_GB/report.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-02-19 16:39+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -1198,7 +1198,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Eithrio"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
