--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -12,7 +12,7 @@
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Lutz Pawske <lutz@pawske.de>, 2013
-# Martin Peth <peth@systopia.de>, 2013,2015
+# Martin Peth <peth@systopia.de>, 2013,2015-2016
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # heliogabal <rhalbmann@gmail.com>, 2014
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:53+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:24+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2196,7 +2196,7 @@ msgstr "Kontakt-Präfix"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr "Akronym"
+msgstr "Pseudonym"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
