po: update po/cy_GB/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/event.po
+++ b/po/cy_GB/event.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-02-19 16:34+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -779,7 +779,7 @@ msgstr ""
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Schedule Reminders"
-msgstr ""
+msgstr "Atgoffebion Amserlen"
 
 #: CRM/Event/Form/ManageEvent.php
 msgid "Configure Event"
