--- a/po/de_DE/pcp.po
+++ b/po/de_DE/pcp.po
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:04+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:29+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -487,7 +487,7 @@ msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
 "names (or nicknames) of the people who supported your campaign. (People will"
 " have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Wenn diese Auswahl überprüft wird, wird eine \"Ehrenrolle\" mit den Namen (oder Akronymen) von den Leuten gezeigt, die Ihre Kampagne unterstützt haben. (Leute werden die Auswahl haben, anonym zu bleiben. Ihre Namen werden NICHT genannt.)"
+msgstr "Wenn diese Option aktiviert ist, wird eine \"Ehrentafel\" mit den Namen (oder Pseudonymen) der Unterstützer/innen Ihrer Kampagne angezeigt. (Die Benutzer/innen haben auch die Option, anonym zu bleiben. Ihre Namen werden dann NICHT gezeigt.)"
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
