--- a/po/de_DE/contribute.po
+++ b/po/de_DE/contribute.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:49+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:29+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -440,7 +440,7 @@ msgstr "Pcp Anzeige in der Ehrentafel"
 
 #: CRM/Contribute/DAO/ContributionSoft.php
 msgid "Pcp Roll Nickname"
-msgstr "Pcp Akronym für Ehrentafel"
+msgstr "Pcp Pseudonym für Ehrentafel"
 
 #: CRM/Contribute/DAO/ContributionSoft.php
 msgid "Pcp Personal Note"
