--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 10:04+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:24+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2260,7 +2260,7 @@ msgstr "Anzeige-Name"
 #: CRM/Contact/Form/Edit/Individual.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
 msgid "Nickname"
-msgstr "Akronym"
+msgstr "Pseudonym"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
