po: update po/de_DE/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -13,7 +13,7 @@
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2015
 # Jo <jo@caj-augsburg.de>, 2012
-# Martin Peth <peth@systopia.de>, 2014-2015
+# Martin Peth <peth@systopia.de>, 2014-2016
 # metalmatze <matthias.hahn@web.de>, 2014
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:08+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-02-19 16:29+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1167,7 +1167,7 @@ msgstr "Willkommen %1"
 msgid ""
 "Enter the name you want listed with this contribution. You can use a nick "
 "name like 'The Jones Family' or 'Sarah and Sam'."
-msgstr "Geben Sie den Namen ein, der zusammen mit dieser Zuwendung in der Liste aufscheinen soll. Sie können auch ein Akronym verwenden, wie z.B. \"Die Familie Huber\" oder \"Sarah und Sam\"."
+msgstr "Geben Sie den Namen ein, der zusammen mit dieser Zuwendung in der Liste erscheinen soll. Sie können auch ein Pseudonym verwenden, z.B. \"Familie Huber\" oder \"Sarah und Sam\"."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
