--- a/po/pl_PL/campaign.po
+++ b/po/pl_PL/campaign.po
@@ -7,13 +7,14 @@
 # njakub <fiilozof@gmail.com>, 2014
 # Michał Mach <michau@gmail.com>, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
+# Scardinius <scardinius@chords.pl>, 2016
 # Sergey <kovalski1601@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-19 14:59+0000\n"
+"Last-Translator: Scardinius <scardinius@chords.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -286,7 +287,7 @@ msgstr "Znajdź kampanię"
 
 #: CRM/Campaign/Form/Search/Petition.php
 msgid "Find Petition"
-msgstr ""
+msgstr "Znajdź petycję"
 
 #: CRM/Campaign/Form/Search/Survey.php
 msgid "Find Survey"
@@ -561,15 +562,15 @@ msgstr "Włącz badanie"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Update Petition"
-msgstr ""
+msgstr "Zaktualizuj petycję"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Disable Petition"
-msgstr ""
+msgstr "Wyłącz petycję"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Enable Petition"
-msgstr ""
+msgstr "Włącz petycję"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign"
@@ -577,7 +578,7 @@ msgstr "Znak"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign Petition"
-msgstr ""
+msgstr "Podpisz petycję"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Signatures"
@@ -606,7 +607,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Petition"
-msgstr ""
+msgstr "Szukaj petycji"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Surveys"
@@ -614,7 +615,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Petitions"
-msgstr ""
+msgstr "Petycje"
 
 #: CRM/Campaign/Selector/Search.php
 msgid "Respondents"
@@ -668,7 +669,7 @@ msgstr "Uwolniony."
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "You have already signed this petition."
-msgstr ""
+msgstr "Już podpisałeś tę petycję."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
@@ -678,7 +679,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
-msgstr ""
+msgstr "Czy jesteś pewien, że chcesz skasować tę petycję?"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
@@ -765,7 +766,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Add Petition"
-msgstr ""
+msgstr "Dodaj petycję"
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Petition ID"
