--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-03 23:05+0000\n"
+"PO-Revision-Date: 2016-02-19 13:31+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1182,7 +1182,7 @@ msgstr "Vidarebefordra e-post"
 
 msgctxt "menu"
 msgid "Sending Mail"
-msgstr "Sänder e-post"
+msgstr "Skicka utskick"
 
 msgctxt "menu"
 msgid "Mailing Event"
