po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-12 12:25+0000\n"
+"PO-Revision-Date: 2016-02-19 12:35+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3334,7 +3334,7 @@ msgid ""
 "These settings are used to configure properties for the CiviEvent component."
 " Please read the %1 documentation, and make sure you understand it before "
 "modifying default values."
-msgstr ""
+msgstr "Dessa inställningar används av komponenten CiviEvent. Läs dokumentationen i %1 och säkra att du förstår den innan du ändrar standardinställningarna."
 
 #: templates/CRM/Admin/Form/Setting/Event.tpl
 msgid "Check to enable the Event Cart checkout workflow."
@@ -3467,7 +3467,7 @@ msgid ""
 "Please read the %1 documentation, and make sure you understand it before "
 "modifying default values. (These settings are NOT used for the built-in "
 "'Send Email to Contacts' feature)."
-msgstr ""
+msgstr "Dessa inställningar används av komponenten CiviMail och låter dig optimera prestandan för mailutskick. Läs dokumentationen i %1 och säkra att du förstår den innan du ändrar standardinställningarna. (Dessa inställningar används INTE av den inbyggda funktionen \"Skicka e-post till kontakt\", utan bara av utskickskomponenten.)"
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
