--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 16:24+0000\n"
+"PO-Revision-Date: 2016-02-20 16:56+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2168,7 +2168,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contribution Avg"
-msgstr ""
+msgstr "Durchschnittliche Zuwendung"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
