--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 16:00+0000\n"
+"PO-Revision-Date: 2016-02-22 02:39+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2993,11 +2993,11 @@ msgstr "Staat / Provincie"
 
 #: CRM/Contact/Form/Edit/Address.php xml/templates/civicrm_data.tpl
 msgid "Latitude"
-msgstr "breedtegraad"
+msgstr "Breedtegraad"
 
 #: CRM/Contact/Form/Edit/Address.php xml/templates/civicrm_data.tpl
 msgid "Longitude"
-msgstr "lengtegraad"
+msgstr "Lengtegraad"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Core/DAO/Address.php
@@ -6687,7 +6687,7 @@ msgstr "Opties per regel"
 
 #: CRM/Core/DAO/CustomField.php
 msgid "Text Length"
-msgstr "Tekst lengte"
+msgstr "Tekstlengte"
 
 #: CRM/Core/DAO/CustomField.php
 msgid "Start Date Years"
