--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-15 15:56+0000\n"
+"PO-Revision-Date: 2016-02-22 02:39+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -901,7 +901,7 @@ msgstr "Postcode van het adres"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Latitude"
-msgstr "breedtegraad"
+msgstr "Breedtegraad"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Latitude of the Address for mapping"
@@ -909,7 +909,7 @@ msgstr "Breedtegraad van het Adres voor mapping"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Longitude"
-msgstr "lengtegraad"
+msgstr "Lengtegraad"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Longitude of the Address for mapping"
