--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:47+0000\n"
+"PO-Revision-Date: 2016-02-22 21:53+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -424,7 +424,7 @@ msgstr "Afsluiten batch"
 #: CRM/Batch/BAO/Batch.php CRM/Financial/Form/BatchTransaction.php
 #: CRM/Financial/Form/Export.php templates/CRM/Financial/Form/Export.tpl
 msgid "Export Batch"
-msgstr "Exporteren batch"
+msgstr "Batch exporteren"
 
 #: CRM/Batch/BAO/Batch.php CRM/Financial/Form/Search.php
 msgid "Re-open"
