--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 02:39+0000\n"
+"PO-Revision-Date: 2016-02-22 21:45+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -26340,7 +26340,7 @@ msgstr "Exporteer"
 
 #: CRM/Friend/Form.php
 msgid "Thank you for your support"
-msgstr "Bedankt voor uw ondersteuning"
+msgstr "Bedankt voor uw steun!"
 
 #: CRM/Price/BAO/PriceField.php templates/CRM/Price/Form/PriceSet.tpl
 msgid "Sold out"
@@ -26653,7 +26653,7 @@ msgstr "Automatisch verlengen lidmaatschap - U kunt relaties de mogelijkheid gev
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid "You are using a payment processor that supports auto-renewals."
-msgstr "U een betaalmethode gebruikt die automatische verlenging ondersteund."
+msgstr "U gebruikt een betaalmethode die automatische verlenging ondersteunt."
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid ""
