po: update po/nl_NL/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:54+0000\n"
+"PO-Revision-Date: 2016-02-22 21:51+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -355,7 +355,7 @@ msgstr "De campagnepagina '%1' is actief."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Enabled"
-msgstr "Pagina Ingeschakeld"
+msgstr "Pagina ingeschakeld"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
