po: update po/pt_BR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/mailing.po
+++ b/po/pt_BR/mailing.po
@@ -8,6 +8,7 @@
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011
+# João Fagner Fonseca de Oliveira <fagworio@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Rafael Fontenelle <rffontenelle@gmail.com>, 2012
 # Wesley Ferreira <contato@wesleyferreira.adv.br>, 2012
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-22 18:07+0000\n"
+"Last-Translator: João Fagner Fonseca de Oliveira <fagworio@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -84,7 +85,7 @@ msgstr "A <a href=\"%1\">caixa de correio padrão</a> foi configurada. Você pod
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Opens"
-msgstr ""
+msgstr "Aberto"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "View Mailing"
@@ -139,7 +140,7 @@ msgstr "Anular Pedidos"
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Forwards"
-msgstr ""
+msgstr "Encaminhamentos"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing Name(s)"
@@ -231,7 +232,7 @@ msgstr "Opção Sair"
 
 #: CRM/Mailing/DAO/Component.php templates/CRM/Mailing/Page/Resubscribe.tpl
 msgid "Resubscribe"
-msgstr ""
+msgstr "Re Inscrever-se"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "From Email"
@@ -247,7 +248,7 @@ msgstr "Rastreamento de URL"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Forward Replies"
-msgstr ""
+msgstr "Encaminhar Respostas"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Auto Responder"
@@ -485,7 +486,7 @@ msgstr "Agenda de Divulgação"
 
 #: CRM/Mailing/Form/Schedule.php
 msgid "Submit Mailing"
-msgstr ""
+msgstr "Enviar Mailing"
 
 #: CRM/Mailing/Form/Schedule.php
 msgid ""
@@ -528,7 +529,7 @@ msgstr "Auto-responder a Retornos?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Mailing Visibility"
-msgstr ""
+msgstr "Visibilidade do Mailing"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track and Respond"
@@ -608,7 +609,7 @@ msgstr "Não há nenhum endereço de email de rementende válido. Você pode adi
 
 #: CRM/Mailing/Form/Upload.php templates/CRM/Mailing/Form/Upload.tpl
 msgid "Reply-To"
-msgstr ""
+msgstr "Responder Para"
 
 #: CRM/Mailing/Form/Upload.php CRM/Mailing/Selector/Search.php
 #: templates/CRM/Mailing/Form/Task/Print.tpl
@@ -789,11 +790,11 @@ msgstr "Email Encaminhado"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 msgid "Successful Deliveries"
-msgstr ""
+msgstr "Entregas com Sucesso"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 msgid "Bounces"
-msgstr ""
+msgstr "Retornos"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Replies"
@@ -801,7 +802,7 @@ msgstr "Respostas Únicas"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 msgid "Replies"
-msgstr ""
+msgstr "Respostas"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Click-throughs"
@@ -809,7 +810,7 @@ msgstr "Cliques unicos"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 msgid "Click-throughs"
-msgstr ""
+msgstr "Cliques Diretos"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Tracked Opens"
