po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -13,6 +13,7 @@
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Finks Costa <finkseletronica28@gmail.com>, 2015
 # Gustavo Rodrigues da Silva <gustavo.arjuna@gmail.com>, 2015
+# João Fagner Fonseca de Oliveira <fagworio@gmail.com>, 2016
 # Leila Otto Algarve <leila.algarve@gmail.com>, 2015
 # Miro Baía <showdebar@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -25,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-22 18:33+0000\n"
+"Last-Translator: João Fagner Fonseca de Oliveira <fagworio@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1985,7 +1986,7 @@ msgstr "Você não tem permissão para reverter esse modelo."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Modelo de Mensagem"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4870,7 +4871,7 @@ msgstr "Modelos de mensagem do sistema de fluxo de trabalho são usados para ger
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Fluxo de trabalho"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -5013,7 +5014,7 @@ msgstr "Não há Tipos de Localidade registrados para esse Contato. Você pode <
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Tipos de Atividade"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6324,7 +6325,7 @@ msgstr "Se a sua organização tem modificado as versões padrão dos modelos de
 msgid ""
 "This option group is reserved for system use. You cannot add or delete "
 "options in this list."
-msgstr ""
+msgstr "Esse grupo de opções é reservados ao sistema. Você não pode adicionar ou excluir opções nesta lista."
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "No Scheduled Reminders have been created."
@@ -6372,23 +6373,23 @@ msgstr "Nota: a etiqueta selecionada é usada por entidades adicionais."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Download e Instalação \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Desinstalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Ativar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Desativar \"%1\"?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6440,23 +6441,23 @@ msgstr "Notas ou condições normalizadas"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
-msgstr ""
+msgstr "Entre com uma nota ou uma mensagem para ser mostrada no PDF da Fatura ou nas notas de credito."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr ""
+msgstr "Automaticamente envia e-mail de fatura quando o usuário faz uma compra online"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
-msgstr ""
+msgstr "Prazo de imposto"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
-msgstr ""
+msgstr "Mostra Configurações de Imposto"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
-msgstr ""
+msgstr "Ativar Imposto Fiscal e Faturamento"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit or Add Recipients"
@@ -6466,7 +6467,7 @@ msgstr "Limitar ou adicionar destinatários"
 msgid ""
 "If \"Also include\" or \"Limit to\" are selected, you must specify at least "
 "one %1"
-msgstr ""
+msgstr "Se \"Também incluir\" ou \"Limite de\" são selecionados, você deve especificar pelo menos um %1"
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
@@ -6503,7 +6504,7 @@ msgid ""
 "Screens > Custom Fields and click ‘edit’ on the field you want to use. Look "
 "at the URL. The last part of the URL will be an equal sign and a number "
 "(=12). The number (12 in this example) is the id of that custom field."
-msgstr ""
+msgstr "Tokens customizados (Baseados em dados personalizada) podem ser adicionado como organizações. Estes tokens não serão mostrados na lista de tokens disponíveis, mas poderão ser adicionados manualmente. O formato é %1 - onde 12 é o ID dos campos de dados personalizados. Para achar o ID do campo de dados personalizados, vá em Administrar > Dados Personalizados & Telas > Campos Personalizados e clique em 'editar' o campo que você quer usar. Observar a URL. A ultima parte da URL será o sinal de igual (=) e o numero (=12). O número (12 neste exemplo) é o id do campo personalizado."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
