--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:55+0000\n"
+"PO-Revision-Date: 2016-02-22 21:46+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -613,7 +613,7 @@ msgstr "Betaalmethode"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mapping and Geocoding"
-msgstr "Landkaarten en Geocoding"
+msgstr "Landkaarten en geocoding"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2097,7 +2097,7 @@ msgstr "Toelagestatus"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Developer"
-msgstr "Voor developers"
+msgstr "Voor ontwikkelaars"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
