--- a/po/sv_SE/case.po
+++ b/po/sv_SE/case.po
@@ -6,13 +6,13 @@
 # Britta Kjellin <info@eclaw.se>, 2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-22 14:56+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1218,7 +1218,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 sparad"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
