po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-03 23:06+0000\n"
+"PO-Revision-Date: 2016-02-22 14:57+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -11100,7 +11100,7 @@ msgstr "CiviCRM-profilen '%1' har sparats."
 
 #: CRM/UF/Form/Group.php
 msgid "Profile Saved"
-msgstr ""
+msgstr "Profil sparad"
 
 #: CRM/UF/Form/Group.php
 msgid ""
@@ -25519,7 +25519,7 @@ msgstr ""
 
 #: templates/CRM/common/TabHeader.js
 msgid "Your changes in the <em>%1</em> tab have not been saved."
-msgstr ""
+msgstr "Dina ändringar på fliken <em>%1</em> har inte sparats."
 
 #: templates/CRM/common/enableDisableApi.tpl
 msgid "%1 Disabled"
