--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-01 12:27+0000\n"
+"PO-Revision-Date: 2016-02-23 11:51+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2025,7 +2025,7 @@ msgid ""
 "Return to this screen (<strong>Administer CiviCRM &raquo; CiviEvent &raquo; "
 "Manage Events &raquo; Configure &raquo; Online Registration</strong>) and "
 "select your profile."
-msgstr ""
+msgstr "Återvänd till denna sida (<strong>Administera &raqou; CiviEvent &raquo; Hantera arrangemang &raquo; Konfigurera &raquo; Webbanmälan</strong>) och välj den önskade profilen."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Registration Link"
