--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 14:57+0000\n"
+"PO-Revision-Date: 2016-02-23 14:18+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -25870,7 +25870,7 @@ msgstr "Kontakt som inte har ett namn måste ha en epostadress."
 
 #: CRM/Contact/Form/Merge.php
 msgid "Merge %1 contacts"
-msgstr ""
+msgstr "Slå samman kontakter av typen '%1'"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contact ID %1 has been merged and deleted."
