po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 12:35+0000\n"
+"PO-Revision-Date: 2016-02-23 12:10+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -5083,7 +5083,7 @@ msgid ""
 " requires additional payment methods, you can add them here. You can "
 "associate each payment method with a Financial Account which specifies where"
 " the payment is going (e.g. a bank account for checks and cash)."
-msgstr ""
+msgstr "Du kan välja att registrera betalningsmetoden som används för varje inbetalning och avgift. Reserverade betalningsmetoder kan inte tas bort men du kan ändra deras namn. Om du har behov av ytterligare betalningsmetoder kan du lägga till dom här. Du kan också koppla varje betalningsmetod till ett finansiellt konto som anger vart betalningen tar vägen (t.ex till ett bankkonto för checkar och kontanter)."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
