po: update po/sv_SE/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/drupal-civicrm.po
+++ b/po/sv_SE/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-01-25 20:50+0000\n"
+"PO-Revision-Date: 2016-02-25 20:08+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2847,7 +2847,7 @@ msgstr "Ange ämne för epostmeddelandet"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Select the group"
-msgstr ""
+msgstr "Välj grupp"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be added to selected group."
