--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-23 12:07+0000\n"
+"PO-Revision-Date: 2016-02-26 23:37+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2197,7 +2197,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_text.tpl
 msgid "Thank you for your support."
-msgstr ""
+msgstr "Tack för ditt stöd."
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
