--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-23 11:51+0000\n"
+"PO-Revision-Date: 2016-02-26 23:36+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3412,7 +3412,7 @@ msgstr ""
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Class"
-msgstr ""
+msgstr "Klass för deltagarstatus"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Is Reserved?>"
