--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-25 19:53+0000\n"
+"PO-Revision-Date: 2016-02-26 23:37+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1226,11 +1226,11 @@ msgstr "Diverse (Återställning, PDF:er, gränser, loggning, Captcha, mm.)"
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "Logging"
-msgstr ""
+msgstr "Loggning"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Path to wkhtmltopdf executable"
-msgstr ""
+msgstr "Sökväg till 'wkhtmltopdf'-programmet"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Public Key"
@@ -1246,7 +1246,7 @@ msgstr "Timeout för kontrollpanelens cache"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "CheckSum Lifespan"
-msgstr ""
+msgstr "Livstid för checksumma"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Recaptcha Options"
@@ -2589,7 +2589,7 @@ msgstr "Namnet på den PHP-klass som implementerar funktionaliteten."
 msgid ""
 "Description is included at the top of the activity edit and view pages for "
 "this type of activity."
-msgstr ""
+msgstr "Beskrivningen visas överst på redigerings- och visningssidor för denna typ av åtgärd."
 
 #: templates/CRM/Admin/Form/ParticipantStatus.tpl
 msgid "New Participant Status"
@@ -2610,7 +2610,7 @@ msgstr "VARNING: Om du tar bort denna deltagarstatus tar du också bort alla des
 
 #: templates/CRM/Admin/Form/ParticipantStatus.tpl
 msgid "Name of this status type, for use in the code."
-msgstr ""
+msgstr "Namn på detta status som skall användas i programkod."
 
 #: templates/CRM/Admin/Form/ParticipantStatus.tpl
 msgid "Display label for this status."
@@ -3565,7 +3565,7 @@ msgstr "Antalet minuter som kontrollpanelelementens data skall sparas innan det 
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid "The number of days before a personalized (hashed) link will expire."
-msgstr ""
+msgstr "Antal dagar innan en personlig (hashad) länk förfaller."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -3596,7 +3596,7 @@ msgid ""
 "generating a large number of PDF letters or receipts. Your system "
 "administrator will need to download and install this utility, and enter the "
 "executable path here."
-msgstr ""
+msgstr "<a href=\"%1\">'wkhtmltopdf' är ett alternativt program för att generera PDF:er</a> som kan ge bättre prestanda, särskilt om du genererar många brev eller kvitton i PDF-format. Din systemadministratör behöver ladda ner och installera detta program och ange sökvägen till det här. "
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6031,7 +6031,7 @@ msgstr ""
 msgid ""
 "Configure how many events should be shown on the dashboard. This overrides "
 "the default value of 10 entries."
-msgstr ""
+msgstr "Konfigurera hur många arrangemang som skall visas på kontrollpanelen. Detta överrider standardinställningen som är 10 arrangemang."
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
@@ -6136,13 +6136,13 @@ msgstr ""
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "If enabled, all actions will be logged with a complete record of changes."
-msgstr ""
+msgstr "Om den här funktionen är aktiverad kommer all aktivitet att loggas med fullständig information om ändringar."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "When enabled, \"empowered by CiviCRM\" is displayed at the bottom of public "
 "forms."
-msgstr ""
+msgstr "När den här funktionen är aktiverad visas \"Drivs av CiviCRM\" på publika formulär."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
