po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-25 21:15+0000\n"
+"PO-Revision-Date: 2016-02-26 22:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -4608,7 +4608,7 @@ msgstr "sidformat"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Select Format"
-msgstr "välj format"
+msgstr "Välj format"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "- default -"
@@ -4628,7 +4628,7 @@ msgstr "Sidorientering"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Unit of Measure"
-msgstr "längdenhet"
+msgstr "Längdenhet"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Left Margin"
@@ -12775,12 +12775,12 @@ msgstr "Behandlar..."
 #: templates/CRM/Activity/Selector/Selector.tpl
 #: templates/CRM/Group/Form/Search.tpl
 msgid "Show _MENU_ entries"
-msgstr ""
+msgstr "Visa _MENU_ poster"
 
 #: templates/CRM/Activity/Selector/Selector.tpl
 #: templates/CRM/Group/Form/Search.tpl
 msgid "Showing _START_ to _END_ of _TOTAL_ entries"
-msgstr ""
+msgstr "Visar post _START_ till _END_ av _TOTAL_"
 
 #: templates/CRM/Activity/Selector/Selector.tpl
 #: templates/CRM/Group/Form/Search.tpl
@@ -23444,7 +23444,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Page Format: %1"
-msgstr ""
+msgstr "Sidformat: %1"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Stationery (relative path to PDF you wish to use as the background)"
@@ -23452,11 +23452,11 @@ msgstr ""
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDF"
-msgstr ""
+msgstr "Skapa PDF"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDFs"
-msgstr ""
+msgstr "Skapa PDF:er"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "External ID conflicts with record %1"
@@ -25555,7 +25555,7 @@ msgstr ""
 
 #: templates/CRM/common/publicFooter.tpl
 msgid "empowered by %1"
-msgstr ""
+msgstr "drivs av %1"
 
 #: templates/CRM/common/success.tpl
 msgid ""
