--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -5,6 +5,7 @@
 # Translators:
 # marc.b <marc@dynamik.ca>, 2012
 # marc.b <marc@dynamik.ca>, 2012
+# Mathieu B <mathieu@brab.ca>, 2016
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-28 05:01+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
