--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Mathieu B <mathieu@brab.ca>, 2016
 # Mathieu Lutfy <mathieu@bidon.ca>, 2012,2014-2016
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 22:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-28 04:12+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1676,7 +1677,7 @@ msgstr "Ce titre est ce que voient les utilisateurs quand ils choisissent un mod
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Modèle"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
