po: update po/en_GB/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/common-base.po
+++ b/po/en_GB/common-base.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Andi Chandler <andi@gowling.com>, 2016
 # Graham <graham@mc3.coop>, 2012-2013
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2012
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-15 15:02+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-28 09:18+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -143,7 +144,7 @@ msgstr "All"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr ""
+msgstr "ACL ID"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -472,7 +473,7 @@ msgstr "(recipients)"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "(%1 contacts)"
-msgstr ""
+msgstr "(%1 contacts)"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Form/MapField.php
 #: CRM/Activity/Import/Parser.php CRM/Contact/BAO/Contact.php
@@ -679,7 +680,7 @@ msgstr "Activity ID"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Source Record"
-msgstr ""
+msgstr "Source Record"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Activity Type ID"
@@ -697,11 +698,11 @@ msgstr "Location"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) ID"
-msgstr ""
+msgstr "Phone (called) ID"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) Number"
-msgstr ""
+msgstr "Phone (called) Number"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
@@ -721,7 +722,7 @@ msgstr "Priority"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Parent Activity Id"
-msgstr ""
+msgstr "Parent Activity Id"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Test"
@@ -733,7 +734,7 @@ msgstr "Auto"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Relationship Id"
-msgstr ""
+msgstr "Relationship Id"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Is this activity a current revision in versioning chain?"
@@ -741,7 +742,7 @@ msgstr "Is this activity a current revision in versioning chain?"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Original Activity ID "
-msgstr ""
+msgstr "Original Activity ID "
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 msgid "Result"
@@ -774,7 +775,7 @@ msgstr "Weight"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Activity Contact ID"
-msgstr ""
+msgstr "Activity Contact ID"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Contact ID (match to contact)"
@@ -782,7 +783,7 @@ msgstr "Contact ID (match to contact)"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Record Type ID"
-msgstr ""
+msgstr "Record Type ID"
 
 #: CRM/Activity/Form/Activity.php CRM/Activity/Selector/Activity.php
 #: CRM/Activity/Selector/Search.php CRM/Contact/DAO/SubscriptionHistory.php
@@ -2270,7 +2271,7 @@ msgstr "Individual Suffix"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Email Greeting ID"
-msgstr ""
+msgstr "Email Greeting ID"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Email Greeting Custom"
@@ -2278,7 +2279,7 @@ msgstr "Email Greeting Custom"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Postal Greeting ID"
-msgstr ""
+msgstr "Postal Greeting ID"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Postal Greeting Custom"
@@ -2286,7 +2287,7 @@ msgstr "Postal Greeting Custom"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Addressee ID"
-msgstr ""
+msgstr "Addressee ID"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Addressee Custom"
@@ -2312,7 +2313,7 @@ msgstr "Is Deceased"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Household Primary Contact ID"
-msgstr ""
+msgstr "Household Primary Contact ID"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Sic Code"
@@ -2374,7 +2375,7 @@ msgstr "Content"
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/DAO/GroupContact.php
 msgid "Group ID"
-msgstr ""
+msgstr "Group ID"
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/Form/Search/Custom/Group.php
 #: CRM/Core/DAO/Cache.php CRM/Core/DAO/Setting.php
@@ -2383,39 +2384,39 @@ msgstr "Group Name"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Title"
-msgstr ""
+msgstr "Group Title"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Description"
-msgstr ""
+msgstr "Group Description"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Source"
-msgstr ""
+msgstr "Group Source"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Saved Search ID"
-msgstr ""
+msgstr "Saved Search ID"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Enabled"
-msgstr ""
+msgstr "Group Enabled"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Visibility Setting"
-msgstr ""
+msgstr "Group Visibility Setting"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Where Clause"
-msgstr ""
+msgstr "Group Where Clause"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Tables For Select Clause"
-msgstr ""
+msgstr "Tables For Select Clause"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Tables For Where Clause"
-msgstr ""
+msgstr "Tables For Where Clause"
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/Form/Task/AddToGroup.php
 #: CRM/Contact/Form/Task/SaveSearch.php CRM/Core/DAO/UFGroup.php
@@ -2426,15 +2427,15 @@ msgstr "Group Type"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Cache Date"
-msgstr ""
+msgstr "Group Cache Date"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Next Group Refresh Time"
-msgstr ""
+msgstr "Next Group Refresh Time"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Parents"
-msgstr ""
+msgstr "Group Parents"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Children"
